# repro-modal-bug

./: Cargo.toml  Dioxus.toml
assets/: tailwind.css
src/: main.rs
