[package]
name = "repro-modal-bug"
version = "0.1.0"
authors = ["Sam Tay <samctay@pm.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }

dioxus = { git = "https://github.com/DioxusLabs/dioxus", features = [
  "fullstack",
] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
